--- a/img/index.html
+++ b/img/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>XXVII JUNIPLAC - Jogos Universitários</title>
-    <link rel="stylesheet" href="css/estilo.css">
+    <link rel="stylesheet" href="C:\Users\jonat\OneDrive\Área de Trabalho\juniplac-templace\css\estilo.css">
 </head>
 
 <body>
@@ -18,7 +18,7 @@
     <h2>Vem pro jogo! 🏀⚽🏐</h2>
     <p>O maior evento esportivo universitário está chegando! Monte sua equipe, escolha sua modalidade e venha competir. 🏅</p>
     <p>Inscrições abertas para futebol, vôlei, basquete e muito mais!</p>
-    <button class="botao">Inscreva-se Agora 🚀</button>
+    <button class="botao">Inscreva-se Agora  🚀</button>
 
     <section>
         <section class="info">
