--- a/img/index.html
+++ b/img/index.html
@@ -10,23 +10,27 @@
 
 <body>
     <header>
-        <h1>🏆XXVII JUNIPLAC - Jogos Universitários🏆</h1>
+        <h1>🏆XXVII JUNIPLAC - Jogos Universitários🏆 </h1>
         <p> 📅De 13 a 30 de março | Forme sua equipe e participe!📅</p>
     </header>
     <section class="hero">
-    <img src="juniplac.png_page-0001.jpg" width="300" height="200"  alt="Jogos Universitários - XXVII JUNIPLAC">
+    <img src="juniplac.png_page-0001.jpg"  alt="Jogos Universitários - XXVII JUNIPLAC">
     <h2>Vem pro jogo! 🏀⚽🏐</h2>
     <p>O maior evento esportivo universitário está chegando! Monte sua equipe, escolha sua modalidade e venha competir. 🏅</p>
     <p>Inscrições abertas para futebol, vôlei, basquete e muito mais!</p>
     <button class="botao">Inscreva-se Agora  🚀</button>
+    </section>
 
-    <section>
         <section class="info">
-        <h2>🔹 Modalidades 🔹</h2>
+        <h2 id="modalidade">🔹 Modalidades 🔹</h2>
         <p>⚽ Futebol | 🏀 Basquete | 🏐 Vôlei | 🎯 E muito mais!</p>
         <p>📍 Local: UNIPLAC | 🏆 Premiação especial para os campeões!</p>
     </section>
-    <section></section>
+
+    <footer>
+        <p>📩 <a href="malito@uniplac.com.br">Entre em contato: </a>| 🍭 UNIPLAC </p>
+    </footer>
+
 
 </body>
 
